ensure that any buttons and inputs will not mess up navbar alignment

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -25,6 +25,11 @@
 	}
 }
 
+.navbar input, .navbar button {
+	margin-top: -20px; 
+	/* This ensures that any buttons and inputs in the navbar will not mess up its vertical alignment */
+}
+
 @media (max-width:500px) {
 	.navbar a {
 		text-align: center;
